# shade-oracle

./: .gitignore  Cargo.toml  Cranky.toml  LICENSE.md  Makefile  Makefile.toml  README.md  bacon.toml  build.ts  bundle.sh  compress.sh  deps.txt  lcov.info  package.json  rust-toolchain  rust-toolchain.toml  schema.sh
.config/: nextest.toml
.github/workflows/: main.yml  rust.yml
artifacts/: checksums.txt  checksums_intermediate.txt  index_oracle-aarch64.wasm  mock_band-aarch64.wasm  mock_shade_pair-aarch64.wasm  mock_sienna_pair-aarch64.wasm  oracle_router-aarch64.wasm  proxy_band_oracle-aarch64.wasm  shade_staking_derivative_oracle-aarch64.wasm  shadeswap_market_oracle-aarch64.wasm  siennaswap_lp_oracle-aarch64.wasm  siennaswap_lp_spot_oracle-aarch64.wasm  siennaswap_market_oracle-aarch64.wasm
contracts/bot_oracle/: Cargo.toml
contracts/bot_oracle/src/: contract.rs
contracts/earn_v1_oracle/: Cargo.toml  README.md
contracts/earn_v1_oracle/examples/: schema.rs
contracts/earn_v1_oracle/src/: contract.rs  lib.rs
contracts/index_oracle/: Cargo.toml  README.md
contracts/index_oracle/examples/: schema.rs
contracts/index_oracle/schema/: index-oracle.json
contracts/index_oracle/src/: contract.rs  lib.rs  test.rs
contracts/index_oracle/tests/: integration.rs
contracts/lp_oracle/: Cargo.toml
contracts/lp_oracle/src/: contract.rs  lib.rs  test.rs
contracts/mock_band/: Cargo.toml  Makefile  README.md
contracts/mock_band/examples/: schema.rs
contracts/mock_band/src/: contract.rs  lib.rs  state.rs  test.rs
contracts/mock_ojo/: Cargo.toml
contracts/mock_ojo/src/: contract.rs
contracts/mock_shade_pair/: Cargo.toml
contracts/mock_shade_pair/src/: contract.rs
contracts/mock_sienna_pair/: Cargo.toml
contracts/mock_sienna_pair/src/: contract.rs
contracts/oracle_router/: Cargo.toml
contracts/oracle_router/.cargo/: config
contracts/oracle_router/.github/workflows/: Basic.yml
contracts/oracle_router/examples/: schema.rs
contracts/oracle_router/schema/: oracle-router.json
contracts/oracle_router/src/: contract.rs  lib.rs  registry.rs  state.rs
contracts/oracle_router/tests/: integration.rs
contracts/proxy_band_oracle/: Cargo.toml
contracts/proxy_band_oracle/examples/: schema.rs
contracts/proxy_band_oracle/src/: contract.rs  test.rs
contracts/secretswap_lp_oracle/: Cargo.toml
contracts/secretswap_lp_oracle/examples/: schema.rs
contracts/secretswap_lp_oracle/src/: contract.rs  lib.rs  test.rs
contracts/shade_staking_derivative_oracle/: Cargo.toml  README.md
contracts/shade_staking_derivative_oracle/examples/: schema.rs
contracts/shade_staking_derivative_oracle/schema/: shade-staking-derivative-oracle.json
contracts/shade_staking_derivative_oracle/src/: contract.rs  test.rs
contracts/shade_staking_derivatives_oracle/: Cargo.toml
contracts/shade_staking_derivatives_oracle/src/: contract.rs
contracts/shadeswap_lp_oracle/: Cargo.toml
contracts/shadeswap_market_oracle/: Cargo.toml  README.md
contracts/shadeswap_market_oracle/src/: contract.rs
contracts/shadeswap_market_oracle/tests/: integration.rs
contracts/shadeswap_spot_oracle/: Cargo.toml  README.md
contracts/shadeswap_spot_oracle/src/: contract.rs
contracts/siennaswap_lp_oracle/: Cargo.toml
contracts/siennaswap_lp_oracle/examples/: schema.rs
contracts/siennaswap_lp_oracle/schema/: siennaswap-lp-oracle.json
contracts/siennaswap_lp_oracle/src/: contract.rs  lib.rs  test.rs
contracts/siennaswap_lp_spot_oracle/: Cargo.toml
contracts/siennaswap_lp_spot_oracle/src/: contract.rs  test.rs
contracts/siennaswap_market_oracle/: Cargo.toml
contracts/siennaswap_market_oracle/examples/: schema.rs
contracts/siennaswap_market_oracle/schema/: siennaswap-market-oracle.json
contracts/siennaswap_market_oracle/src/: contract.rs  lib.rs
contracts/siennaswap_market_oracle/tests/: integration.rs
contracts/siennaswap_reserves_oracle/: Cargo.toml
contracts/siennaswap_reserves_oracle/src/: contract.rs
contracts/siennaswap_spot_oracle/: Cargo.toml
contracts/siennaswap_spot_oracle/src/: contract.rs
contracts/silk_oracle/: Cargo.toml  README.md
contracts/silk_oracle/src/: contract.rs
contracts/snip20/: Cargo.toml
contracts/snip20/src/: contract.rs  helpers.rs  lib.rs  msg.rs
contracts/staking_derivatives/lido/: Cargo.toml
contracts/staking_derivatives/lido/src/: contract.rs
contracts/staking_derivatives/persistence/: Cargo.toml
contracts/staking_derivatives/persistence/src/: contract.rs
contracts/staking_derivatives/quicksilver/: Cargo.toml
contracts/staking_derivatives/quicksilver/src/: contract.rs
contracts/staking_derivatives/stride/: Cargo.toml
contracts/staking_derivatives/stride/src/: contract.rs
contracts/stride_staking_derivatives_oracle/: Cargo.toml
contracts/stride_staking_derivatives_oracle/src/: contract.rs
contracts/stride_staking_deriviatives_oracle/: Cargo.toml
contracts/stride_staking_deriviatives_oracle/src/: contract.rs
contracts/testnet_snip20_faucet/: Cargo.toml
contracts/testnet_snip20_faucet/src/: contract.rs  lib.rs
schemas/BotOracle/: BotOracle.json
schemas/DerivativesBot/: DerivativesBot.json
schemas/DerivativesGeneric/: DerivativesGeneric.json
schemas/DexGeneric/: DexGeneric.json
schemas/IndexOracle/: IndexOracle.json
schemas/MockBandProvider/: MockBandProvider.json
schemas/MockOjoProvider/: MockOjoProvider.json
schemas/OracleRouter/: OracleRouter.json
types/: BotOracle.types.ts  DerivativesBot.types.ts  DerivativesGeneric.types.ts  DexGeneric.types.ts  IndexOracle.types.ts  MockBandProvider.types.ts  MockOjoProvider.types.ts  OracleRouter.types.ts
