[workspace]
resolver = "2"
members = [
  "packages/*",
  "contracts/*",
]

[workspace.dependencies]
shade-protocol = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }
multi-derive = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }
shade-multi-test = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
