[workspace]
resolver = "2"
members = [
  "packages/*",
  "contracts/bot_oracle",
  "contracts/index_oracle",
  "contracts/mock_band",
  "contracts/mock_ojo",
  "contracts/oracle_router",
  "contracts/shade_staking_derivatives_oracle",
  "contracts/shadeswap_market_oracle",
  "contracts/shadeswap_spot_oracle",
  "contracts/siennaswap_market_oracle",
  "contracts/siennaswap_reserves_oracle",
  "contracts/siennaswap_spot_oracle",
  "contracts/testnet_snip20_faucet",
  "contracts/staking_derivatives/*",
]

[workspace.dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = { version = "1.0.0", package = "secret-cosmwasm-std" }

schemars = "0.8.9"
serde = { version = "1.0.103", default-features = false, features = [
  "derive",
  "alloc",
] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
borsh = "0.10.2"
paste = "1.0"
derive-from-ext = "0.2"

shade-protocol = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }
multi-derive = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }
shade-multi-test = { git = "https://github.com/securesecrets/shade", rev = "lend-v1" }

btr-macros = { git = "https://github.com/securesecrets/better-secret-math" }
better-secret-math = { git = "https://github.com/securesecrets/better-secret-math" }
secret-storage-plus = { git = "https://github.com/securesecrets/secret-plus-utils" }
secret-borsh-storage = { git = "https://github.com/securesecrets/secret-plus-utils" }

anyhow = "1.0.71"
rstest = "0.15.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
