[package]
name = "earn-v1-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []


[dependencies]



snafu = { version = "0.6.3" }

cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
shade-oracles = { path = "../../packages/shade_oracles", features = ["core"] }


