[package]
name = "index-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>", "DrPresident <jacksonswenson@securesecrets.org"]

edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
shade-oracles = { path = "../../packages/shade_oracles" }
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
secret-cosmwasm-math-compat = { version = "0.1.0", git = "https://github.com/chris-ricketts/secret-cosmwasm-math-compat.git", branch = "main" }
secret-toolkit = { version = "0.2" }

[dev_dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
fadroma = { git = "https://github.com/hackbg/fadroma", branch = "v100", features = ["scrt", "backtraces"] }
shade-oracles-ensemble = { path = "../../packages/shade_oracles_ensemble" }
