[package]
name = "index-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>", "DrPresident <jacksonswenson@securesecrets.org"]

edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
shade-oracles = { path = "../../packages/shade_oracles" }
shade_admin = { git = "https://github.com/securesecrets/shadeadmin.git", tag = "v1.0" }
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-math-compat = { tag = "v1.2.0", git = "https://github.com/securesecrets/shade.git" }
secret-toolkit = { version = "0.2" }

[dev_dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
fadroma = { branch = "v100", commit = 76867e0, git = "https://github.com/hackbg/fadroma.git", features =  ["ensemble"]  }
shade-oracles-ensemble = { path = "../../packages/shade_oracles_ensemble" }
