[package]
name = "proxy-band-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>"]

edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["shade-oracles/backtraces"]

[dependencies]

shade_admin = { git = "https://github.com/securesecrets/shadeadmin.git", tag = "v1.0" }


snafu = { version = "0.6.3" }
shade-oracles = { path = "../../packages/shade_oracles", features = ["storage"] }

[dev_dependencies]
cosmwasm-schema = "0.10.1"
mockall = "0.10.2"
