[package]
name = "shade-staking-derivative-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["shade-oracles/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
shade-oracles = { path = "../../packages/shade_oracles", features = [ "core", "shd-staking-derivative" ] }

[dev-dependencies]
shade-oracles-multi-test = { path = "../../packages/multi_test", features = [  "multi-test" ] }