[package]
name = "shade-staking-derivative-oracle"
version = "0.1.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["shade-oracles/backtraces"]

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-math-compat = { tag = "v1.1.0", git = "https://github.com/securesecrets/shade.git" }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "0.10.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "0.10.0" }
secret-toolkit = { version = "0.2", features = ["permit"] }
shade-oracles = { path = "../../packages/shade_oracles" }

[dev-dependencies]
cosmwasm-schema = "0.10.1"