[package]
name = "shadeswap_market_oracle"
version = "0.1.0"
authors = ["DrPresident <jacksonswenson@securesecrets.org"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []


[dependencies]
cosmwasm-std = { version = "1.0.0", package = "secret-cosmwasm-std" }
shade-oracles = { path = "../../packages/shade_oracles", features = ["dex"] }