[package]
name = "siennaswap-market-oracle"
version = "0.1.0"
authors = ["DrPresident <jacksonswenson@securesecrets.org"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["shade-oracles/backtraces"]

[dependencies]
shade-oracles = { path = "../../packages/shade_oracles", features = ["core"] }

[dev-dependencies]
shade-ensemble = { commit = "4b514b1", git = "ssh://git@github.com/securesecrets/shade-ensemble.git" }
shade-oracles-ensemble = { path = "../../packages/shade_oracles_ensemble" }
snip20-reference-impl = { git = "https://github.com/scrtlabs/snip20-reference-impl.git", branch = "master" }
mock-sienna-pair = { path = "../mock_sienna_pair" }
