[package]
name = "snip20_testnet_faucet"
version = "0.2.0"
authors = ["sbeem <sbeem@pm.me>", "scrtreddev <scrtredev@protonmail.com", "hoomp <flammable.shower939@anonaddy.me>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib

[dependencies]
cosmwasm-std = { version = "1.0.0", package = "secret-cosmwasm-std" }
cosmwasm-schema = "1.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = "1.0"
secret-storage-plus = { git = "https://github.com/securesecrets/secret-plus-utils" }
shade-protocol = { git = "https://github.com/securesecrets/shade", branch = "cosmwasm_v1_upgrade", default-features = false, features = ["utils", "interface", "snip20", "math", "admin"] }